# trellis

./: CLAUDE.md  COMPLETED.md  Cargo.toml  Makefile  TODO.md
crates/trellis-admission-formspec/: Cargo.toml
crates/trellis-admission-formspec/src/: lib.rs
crates/trellis-admission-wos/: Cargo.toml
crates/trellis-admission-wos/src/: lib.rs
crates/trellis-conformance/: Cargo.toml
crates/trellis-conformance/examples/: canonical_cbor_emit.rs
crates/trellis-conformance/src/: lib.rs
crates/trellis-conformance/tests/: cross_adapter_admission.rs  stack_delete_surface_crate_paths.rs
crates/trellis-core/src/: lib.rs
crates/trellis-export-writer/src/: export_001_fixture_input.rs  lib.rs
crates/trellis-formspec-signature/: Cargo.toml
crates/trellis-formspec-signature/src/: lib.rs
crates/trellis-server/: Cargo.toml
crates/trellis-server-ports/: Cargo.toml
crates/trellis-server-ports/src/: lib.rs
crates/trellis-server/src/: admission.rs  append.rs  composition.rs  export_profile.rs  http.rs  lib.rs  openapi.rs  state.rs
crates/trellis-server/tests/: dependency_baseline.rs  openapi_public_module.rs
crates/trellis-service-client/: Cargo.toml
crates/trellis-service-client/src/: lib.rs  wos_ext.rs
crates/trellis-store-postgres-async/tests/: append.rs  concurrency.rs  migrations.rs
crates/trellis-store-postgres-async/tests/support/: mod.rs
crates/trellis-types/: Cargo.toml
crates/trellis-types/src/: lib.rs
crates/trellis-verify-wos/: Cargo.toml
crates/trellis-verify-wos/src/: certificate_resolver.rs  clock_semantics.rs  event_types.rs  findings.rs  lib.rs  signed_acts.rs  tests.rs  validator.rs
crates/trellis-verify/src/: certificate.rs  certificate_proof.rs  export.rs  lib.rs  tests.rs  validator.rs
crates/trellis-verify/tests/: facade_reexports.rs
fixtures/vectors/_generator/: gen_adr0067_clocks.py  gen_append_001.py  gen_append_002.py  gen_append_003.py  gen_append_004.py  gen_append_005.py  gen_append_006.py  gen_append_007.py  gen_append_008.py  gen_append_009.py  gen_append_010.py  gen_append_011_to_015.py  gen_append_018.py  gen_append_019.py  gen_append_023_to_027.py  gen_append_028_to_030.py  gen_append_031.py  gen_append_032_to_035.py  gen_append_036_to_039.py  gen_append_041.py  gen_append_042.py  gen_attachment_export_005.py  gen_canonical_cbor_profile.py  gen_export_001.py  gen_export_009_erasure_evidence.py  gen_export_010_certificate_of_completion.py  gen_intake_export_007.py  gen_interop_sidecar_c2pa_037_to_040.py  gen_projection_001.py  gen_projection_002.py  gen_projection_003_004.py  gen_projection_005.py  gen_shred_001.py  gen_shred_002.py  gen_signature_export_006.py  gen_supersession_graph_export_015.py  gen_tamper_001.py  gen_tamper_002.py  gen_tamper_003.py  gen_tamper_004.py  (+18 more)
fixtures/vectors/_generator/_lib/: byte_utils.py
fixtures/vectors/append/001-minimal-inline-payload/: manifest.toml
fixtures/vectors/append/002-rotation-signing-key/: expected-event.cbor  input-pre-rotation-event.cbor
fixtures/vectors/append/003-external-payload-ref/: expected-event.cbor
fixtures/vectors/append/004-hpke-wrapped-inline/: expected-event.cbor
fixtures/vectors/append/006-custody-transition-cm-b-to-cm-a/: expected-event.cbor
fixtures/vectors/append/007-custody-transition-cm-c-narrowing/: expected-event.cbor
fixtures/vectors/append/008-disclosure-profile-transition-a-to-b/: expected-event.cbor
fixtures/vectors/append/009-signing-key-revocation/: expected-event.cbor
fixtures/vectors/canonical-cbor/: README.md  manifest.json
scripts/: check-http-api-schema.py  check_cross_runtime_parity.py  check_signed_acts_projection_parity.py  test_check_http_api_schema.py  test_check_specs.py
specs/: canonical-cbor-profile.md  trellis-core.md  trellis-http-api.schema.json  trellis-operational-companion.md  trellis-requirements-matrix.md  wos-trellis-verification.md
thoughts/adr/: 0011-profile-id-value-sub-registry.md  0013-phase-2-causal-deps-activation.md  0014-canonical-cbor-profile-externalization.md
thoughts/analysis/: 2026-05-13-prose-surgery-audit.md
trellis-py/src/trellis_py/: __init__.py  append.py  conformance.py  constants.py  verify.py  verify_export.py  verify_wos.py
trellis-py/tests/: test_bundle_unbound_member.py  test_policy_closure_validation.py  test_signed_acts_manifest.py  test_signed_acts_manifest_verifier.py  test_user_content_attestation_vectors.py  test_verify_export_seal_fence.py  test_verify_wos.py
(+244 files in other folders)
