[package]
name = "trellis-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
trellis-core = { path = "../trellis-core" }
trellis-store-memory = { path = "../trellis-store-memory" }

# Runtime-port adapter for the §4.2.2 conformance corpus at
# fixtures/vectors/canonical-cbor/. Invoked via
# `cargo run --example canonical_cbor_emit`.
[[example]]
name = "canonical_cbor_emit"
path = "examples/canonical_cbor_emit.rs"

[dev-dependencies]
integrity-bundle-fixtures = { path = "../../../integrity-stack/crates/integrity-bundle-fixtures" }
integrity-cbor = { path = "../../../integrity-stack/crates/integrity-cbor" }
integrity-cose = { path = "../../../integrity-stack/crates/integrity-cose" }
ciborium = "0.2"
proptest = "1.6"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
stack-common-error = { path = "../../../stack-common/crates/stack-common-error" }
stack-common-postgres = { path = "../../../stack-common/crates/stack-common-postgres", default-features = false, features = ["testing"] }
trellis-admission-formspec = { path = "../trellis-admission-formspec" }
trellis-admission-wos = { path = "../trellis-admission-wos" }
trellis-cddl = { path = "../trellis-cddl" }
integrity-bundle = { path = "../../../integrity-stack/crates/integrity-bundle" }
integrity-verify = { path = "../../../integrity-stack/crates/integrity-verify" }
trellis-server-ports = { path = "../trellis-server-ports" }
trellis-store-postgres-async = { path = "../trellis-store-postgres-async" }
trellis-types = { path = "../trellis-types" }
trellis-export-writer = { path = "../trellis-export-writer", features = ["fixture-inputs"] }
trellis-verify-wos = { path = "../trellis-verify-wos" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
wos-events = { path = "../../../work-spec/crates/wos-events" }
