[package]
name = "trellis-service-client"
version.workspace = true
edition.workspace = true
description = "Shared Trellis service HTTP client and substrate contract"
license.workspace = true

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stack-common-error = { path = "../../../stack-common/crates/stack-common-error", default-features = false }
stack-common-http = { path = "../../../stack-common/crates/stack-common-http" }
wos-events = { path = "../../../work-spec/crates/wos-events" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
